chore: update example to use dist build

--- a/examples/basic-usage.html
+++ b/examples/basic-usage.html
@@ -71,7 +71,7 @@
       computeRMS,
       computePeak,
       LoopPlayer
-    } from '../src/index.js';
+    } from '../dist/pleco-xa.js';
 
     let currentPlayer = null;
 
