chore: use minified build in example

--- a/examples/basic-usage.html
+++ b/examples/basic-usage.html
@@ -71,7 +71,7 @@
       computeRMS,
       computePeak,
       LoopPlayer
-    } from '../dist/pleco-xa.js';
+    } from '../dist/pleco-xa.min.js';
 
     let currentPlayer = null;
 
