Add SEO and social metadata

--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Interactive Pleco Xa demo for audio analysis, BPM detection and loop playback." />
+  <meta property="og:title" content="Pleco Xa - Audio Analysis Demo" />
+  <meta property="og:description" content="Interactive demo showcasing Pleco Xa's BPM detection and loop analysis tools." />
+  <meta property="og:image" content="examples/frontend/og.png" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Pleco Xa - Audio Analysis Demo" />
+  <meta name="twitter:description" content="Interactive demo showcasing Pleco Xa's BPM detection and loop analysis tools." />
+  <meta name="twitter:image" content="examples/frontend/og.png" />
   <title>Pleco Xa - Basic Usage Example</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Pleco Xa Demo",
+      "description": "Interactive demo that analyzes audio, detects BPM, and plays loops using the Pleco Xa library.",
+      "url": "https://example.com/demo.html"
+    }
+  </script>
   <style>
     body {
       font-family: Arial, sans-serif;
