--- a/src/pages/index-clean.html
+++ b/src/pages/index-clean.html
@@ -254,13 +254,13 @@
   /* ------------------------------------------------------------------
      1.  Import Librosa helpers (case-sensitive, exact export names)
   ------------------------------------------------------------------ */
-  import { quick_tempo } from '/src/core/librosa-tempo.js';
+  import { quick_tempo } from '/src/core/xa-tempo.js';
   import {
     computeChroma,
     stackMemory,
     recurrenceMatrix,
     recurrenceToLag
-  } from '/src/core/librosa-recurrence.js';
+  } from '/src/core/xa-recurrence.js';
 
   /* ------------------------------------------------------------------
      2.  Shared state
