--- a/public/frontend/bmp-detection.html
+++ b/public/frontend/bmp-detection.html
@@ -298,7 +298,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script type="module">
-      // TODO: Replace with import { detectBPM, loadAudioBuffer } from 'pleco-xa' when v1.0.3 is ready
+      import { detectBPM, loadAudioBuffer } from 'pleco-xa';
 
       // Enhanced BPM detection with half-time/double-time correction
       function detectBPM(audioData, sampleRate) {
